EHL: fixed table borders bleeding through in IE when panels on frontpage are hidden

--- a/branches/dev-sigurd-2/rental/templates/base/css/base.css
+++ b/branches/dev-sigurd-2/rental/templates/base/css/base.css
@@ -410,3 +410,9 @@ p.message {
 .yui-calendar td.calcell {
 	border:0px !important;
 }
+.yui-skin-sam .yui-dt TABLE TH{
+	border: none !important;
+}
+.yui-skin-sam .yui-dt TABLE TD{
+	border: none !important;
+}
